# libsegwayrmp

./: .gitignore  .travis.yml  CHANGELOG.rst  CMakeLists.txt  Findsegwayrmp.cmake  LICENSE  Makefile  README  README.markdown  README.md  changes.txt  index.html  manifest.xml  package.xml  params.json  segway.sublime-project  segway.sublime-workspace  stack.xml
0.1-rc2/: annotated.html  classes.html  classsegwayrmp_1_1_concurrent_queue.html  classsegwayrmp_1_1_configuration_exception.html  classsegwayrmp_1_1_connection_failed_exception.html  classsegwayrmp_1_1_f_t_d2_x_x_r_m_p_i_o.html  classsegwayrmp_1_1_f_t_d2_x_x_r_m_p_i_o__inherit__graph.map  classsegwayrmp_1_1_f_t_d2_x_x_r_m_p_i_o__inherit__graph.md5  classsegwayrmp_1_1_move_failed_exception.html  classsegwayrmp_1_1_no_high_performance_timers_exception.html  classsegwayrmp_1_1_packet_retrieval_exception.html  classsegwayrmp_1_1_r_m_p_i_o.html  classsegwayrmp_1_1_r_m_p_i_o__inherit__graph.map  classsegwayrmp_1_1_r_m_p_i_o__inherit__graph.md5  classsegwayrmp_1_1_read_failed_exception.html  classsegwayrmp_1_1_segway_r_m_p.html  classsegwayrmp_1_1_segway_status.html  classsegwayrmp_1_1_segway_status__coll__graph.map  classsegwayrmp_1_1_segway_status__coll__graph.md5  classsegwayrmp_1_1_segway_time.html  classsegwayrmp_1_1_serial_r_m_p_i_o.html  classsegwayrmp_1_1_serial_r_m_p_i_o__coll__graph.md5  classsegwayrmp_1_1_serial_r_m_p_i_o__inherit__graph.map  classsegwayrmp_1_1_write_failed_exception.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_10.map  inherit_graph_10.md5  (+67 more)
0.1-rc2/search/: all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_77.js  classes_63.js  classes_66.js  classes_6d.js  classes_6e.js  classes_70.js  classes_72.js  classes_73.js  classes_77.js  defines_73.js  enums_63.js  enums_69.js  enums_6f.js  enums_73.js  enumvalues_63.js  enumvalues_64.js  enumvalues_6c.js  enumvalues_6e.js  enumvalues_70.js  enumvalues_72.js  enumvalues_73.js  enumvalues_74.js  enumvalues_75.js  (+36 more)
cmake/: Findsegwayrmp.cmake  libsegwayrmp.pc.in  libsegwayrmpConfig.cmake.in  segwayrmp_examples.cmake  segwayrmp_ftd2xx.cmake  segwayrmp_gui.cmake  segwayrmp_serial.cmake  segwayrmp_settings.cmake  segwayrmp_targets.cmake  segwayrmp_tests.cmake
doc/: Doxyfile  libsegwayrmp.dox  segwayrmp.dox
examples/: segwayrmp_example.cc  segwayrmp_example.cpp
ftd2xx/osx/: libftd2xx.1.1.12.dylib
include/: .gitignore  rmp_io.h  segwayrmp.h  segwayrmp.h.in  serial.h
include/impl/: rmp_ftd2xx.h  rmp_serial.h
include/segwayrmp/: segwayrmp.h
include/segwayrmp/gui/: segwayrmp_gui.h  segwayrmp_gui.ui
include/segwayrmp/impl/: rmp_ftd2xx.h  rmp_io.h  rmp_serial.h
src/: rmp_io.cpp  segwayrmp.cc  segwayrmp.cpp  test_segwayrmp.cpp
src/gui/: main.cc  segwayrmp_gui.cc
src/impl/: rmp_ftd2xx.cc  rmp_ftd2xx.cpp  rmp_io.cc  rmp_serial.cc  rmp_serial.cpp
test/: segwayrmp_tests.cpp
tests/: segwayrmp_tests.cc
