<?xml version="1.0"?>
<package>
  <name>libsegwayrmp</name>
  <version>0.2.10</version>
  <description>
    This is a C++ library for interfacing with Segway's RMP line of robotic platforms.
  </description>

  <maintainer email="wjwwood@gmail.com">William Woodall</maintainer>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>

  <license>BSD</license>

  <url type="website">http://segwayrmp.github.com/libsegwayrmp/</url>
  <url type="repository">https://github.com/segwayrmp/libsegwayrmp</url>
  <url type="bugtracker">https://github.com/segwayrmp/libsegwayrmp/issues</url>

  <author email="wjwwood@gmail.com">William Woodall</author>

  <buildtool_depend>cmake</buildtool_depend>

  <run_depend>catkin</run_depend>

  <build_depend>serial</build_depend>
  <run_depend>serial</run_depend>
  
  <build_depend>boost</build_depend>
  <run_depend>boost</run_depend>

  <build_depend>libqt4-dev</build_depend>
  <run_depend>libqt4</run_depend>

  <build_depend>sdl</build_depend>
  <run_depend>sdl</run_depend>

  <export>
    <build_type>cmake</build_type>

  </export>
</package>
